--- a/BeamWallet/ViewControllers/Main/Wallet/Receive/Cells/ReceiveAddressButtonsCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Receive/Cells/ReceiveAddressButtonsCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,8 +10,8 @@
         <array key="SF-Pro-Display-Bold.otf">
             <string>SFProDisplay-Bold</string>
         </array>
-        <array key="SF-Pro-Display-LightItalic.otf">
-            <string>SFProDisplay-LightItalic</string>
+        <array key="SF-Pro-Display-RegularItalic.otf">
+            <string>SFProDisplay-Italic</string>
         </array>
     </customFonts>
     <objects>
@@ -29,11 +29,11 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NVr-Vl-UQM">
-                        <rect key="frame" x="15" y="10" width="290" height="108"/>
+                        <rect key="frame" x="15" y="10" width="290" height="115"/>
                         <string key="text">Send this address to the sender over an external secure channel.
 
 For the transaction to complete, you should get online during the 12 hours after Beams are sent. </string>
-                        <fontDescription key="fontDescription" name="SFProDisplay-LightItalic" family="SF Pro Display" pointSize="15"/>
+                        <fontDescription key="fontDescription" name="SFProDisplay-Italic" family="SF Pro Display" pointSize="16"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                         <userDefinedRuntimeAttributes>
@@ -100,7 +100,7 @@ For the transaction to complete, you should get online during the 12 hours after
                     <constraint firstAttribute="bottom" secondItem="ZnL-da-miM" secondAttribute="bottom" id="egt-qR-mlJ"/>
                     <constraint firstItem="NVr-Vl-UQM" firstAttribute="leading" secondItem="cgk-y0-vp1" secondAttribute="leading" constant="15" id="h7x-yN-UQq"/>
                     <constraint firstAttribute="trailing" secondItem="NVr-Vl-UQM" secondAttribute="trailing" constant="15" id="hlw-FK-uwJ"/>
-                    <constraint firstItem="wAG-wz-QgD" firstAttribute="top" secondItem="NVr-Vl-UQM" secondAttribute="bottom" constant="40" id="hw8-ya-HfB"/>
+                    <constraint firstItem="wAG-wz-QgD" firstAttribute="top" secondItem="NVr-Vl-UQM" secondAttribute="bottom" constant="33" id="jEK-Sc-JtE"/>
                     <constraint firstItem="NVr-Vl-UQM" firstAttribute="top" secondItem="cgk-y0-vp1" secondAttribute="top" constant="10" id="rQw-ZF-jcS"/>
                 </constraints>
             </tableViewCellContentView>
