--- a/BeamWallet/Controls/Cell/BMPickedAddressCell.xib
+++ b/BeamWallet/Controls/Cell/BMPickedAddressCell.xib
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,11 +21,11 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JsP-i2-Ec3" id="F4K-Mn-els">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vd7-ru-Dur">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ADDRESS (auto-generated)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRY-yO-e5U">
                                 <rect key="frame" x="15" y="10" width="290" height="17"/>
@@ -43,7 +40,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="8jdu7wsdjkflk39902mnsdnkbkjadavfd39nas7877qwbn" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Kgd-in-EgB" customClass="BMCopyLabel" customModule="BeamWallet" customModuleProvider="target">
-                                <rect key="frame" x="15" y="32" width="145" height="57.5"/>
+                                <rect key="frame" x="15" y="32" width="170" height="57.5"/>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -51,15 +48,15 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ht8-am-Vdw" customClass="BMButton" customModule="BeamWallet" customModuleProvider="target">
-                                <rect key="frame" x="180" y="53.5" width="125" height="36"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ht8-am-Vdw" customClass="BMButton" customModule="BeamWallet" customModuleProvider="target">
+                                <rect key="frame" x="205" y="54" width="100" height="36"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="125" id="82H-tw-gbB"/>
+                                    <constraint firstAttribute="width" constant="100" id="82H-tw-gbB"/>
                                     <constraint firstAttribute="height" constant="36" id="ggn-F3-vUa"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="16"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="20" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="2" maxX="10" maxY="0.0"/>
                                 <state key="normal" title="change" image="iconShuffle">
                                     <color key="titleColor" red="0.043137254899999998" green="0.80000000000000004" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
@@ -72,7 +69,7 @@
                                         <color key="value" red="0.043137254899999998" green="0.80000000000000004" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                        <real key="value" value="1"/>
+                                        <real key="value" value="0.0"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="pick_address"/>
                                 </userDefinedRuntimeAttributes>
@@ -85,13 +82,13 @@
                         <constraints>
                             <constraint firstItem="Kgd-in-EgB" firstAttribute="top" secondItem="YRY-yO-e5U" secondAttribute="bottom" constant="5" id="1MT-qP-4o4"/>
                             <constraint firstItem="YRY-yO-e5U" firstAttribute="leading" secondItem="Vd7-ru-Dur" secondAttribute="leading" constant="15" id="BFc-VG-Rlu"/>
-                            <constraint firstAttribute="bottom" secondItem="Kgd-in-EgB" secondAttribute="bottom" constant="10" id="CHH-XZ-VaY"/>
                             <constraint firstAttribute="bottom" secondItem="ht8-am-Vdw" secondAttribute="bottom" constant="10" id="D7T-jO-VYZ"/>
                             <constraint firstItem="Kgd-in-EgB" firstAttribute="leading" secondItem="Vd7-ru-Dur" secondAttribute="leading" constant="15" id="O4r-TX-wHl"/>
                             <constraint firstItem="ht8-am-Vdw" firstAttribute="leading" secondItem="Kgd-in-EgB" secondAttribute="trailing" constant="20" id="OCb-3a-KoP"/>
                             <constraint firstItem="YRY-yO-e5U" firstAttribute="top" secondItem="Vd7-ru-Dur" secondAttribute="top" constant="10" id="j4b-3s-3i1"/>
                             <constraint firstAttribute="trailing" secondItem="ht8-am-Vdw" secondAttribute="trailing" constant="15" id="meU-UK-v6l"/>
                             <constraint firstAttribute="trailing" secondItem="YRY-yO-e5U" secondAttribute="trailing" constant="15" id="w3J-Hy-1N4"/>
+                            <constraint firstAttribute="bottom" secondItem="Kgd-in-EgB" secondAttribute="bottom" constant="10.5" id="x4a-OR-Qi6"/>
                         </constraints>
                     </view>
                 </subviews>
